2005-08-04  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs:
		set a correct name to nameless parameters

2005-08-03  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/OpCodes.cs
	  Mono.Cecil.Cil/OpCodes.cs
	  Mono.Cecil.Cil/OpCode.cs:
		Revert modifications to reduce code. OpCodes::.ctors were
		not called.

	* Mono.Cecil.Implem/ReflectionReader.cs:
		Make sure parameters are read even if there is no
		corresponding Param row. Thanks Cesar for the hint.

	* Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/UserStringsHeap.cs
	  Mono.Cecil.Metadata/GuidHeap.cs
	  Mono.Cecil.Implem/CodeReader.cs:
		On going work on the writing layer

	* CodeGen/cecil-gen.rb
	  CodeGen/cecil-gen-sources.rb
		make executable
	* *.*: set svn:eol-style to native

	* Mono.Cecil/BaseStructureVisitor.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil.Implem/BaseReflectionReader.cs:
		Add empty visitors for the sake of simplicity
	* Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/ReflectionReader.cs:
		Inherit new visitors

2005-08-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs
	  Mono.Cecil.Implem/LazyReflectionReader.cs
	  Mono.Cecil.Implem/CodeReader.cs:
		Modify and add helpers to avoid lots of casts.
		Correct a bug in custom attributes attribution.

2005-08-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/TypeSpec.cs:
		Don't restrain the SigType
	* Mono.Cecil.Implem/AggressiveReflectionReader.cs:
		Set PInvokeInfos on the correct method

2005-07-30  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/cecil-gen-sources.rb:
		make them executable
	* CodeGen/cecil-gen-types: style
	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Prelimimary work on assembly writing

2005-07-29  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen-types.rb
	  CodeGen/templates/MetadataTableWriter.cs